# RGOL

./: .gitignore  CMakeLists.txt  ideas.txt
data/: glider3.txt  test_input.txt
includes/: field.hpp  genetic_algorithm.hpp  gui.hpp  header.hpp  helpers.hpp  parser.hpp
src/: field.cpp  genetic_algorithm.cpp  gui.cpp  main.cpp  parser.cpp
